# Voxel-Engine

./: .cursorignore  .gitignore  Build.lua  CMakeLists.txt  README.md  Voxel Engine.sln
.cursor/rules/: acknowledge.mdc  format-rule.mdc  optimized.mdc
App/: App.vcxproj  Build-App.lua  imgui.ini
App/source/: main.cpp
Core/: Build-Core-External.lua  Build-Core.lua  Core.vcxproj  Core.vcxproj.filters
Core/source/: AccelerationStructure.h  Application.cpp  Application.h  Buffer.h  Chunk.cpp  Chunk.h  ECS.h  EntryPoint.h  FirstPersonCamera.h  MemoryClasses.cpp  MemoryClasses.h  PerformanceTimer.h  VoxelEngine.cpp  VoxelEngine.h  VulkanContext.cpp  VulkanContext.h  World.h
Scripts/: Setup-Windows.bat
shaders/: shader.rchit  shader.rgen  shader.rint  shader.rmiss
source/: AccelerationStructure.h  AccelerationStructures.hpp  Buffer.hpp  Camera.h  Chunk.cpp  Chunk.h  CountLOC.ps1  DebugUtils.hpp  Device.cpp  Device.h  FirstPersonCamera.h  MemoryClasses.cpp  MemoryClasses.hpp  Multithreading.h  PerformanceTimer.hpp  Timer.cpp  Timer.h  VoxelEngine.cpp  VoxelEngine.hpp  VulkanContext.cpp  VulkanContext.hpp  World.h  main.cpp  rasterizer.cpp
